Fix: Increased section spacing to isolate 'Platform' and 'Solutions' views

--- a/css/style.css
+++ b/css/style.css
@@ -303,8 +303,9 @@ header {
 /* Sections */
 .presentation,
 .contact {
-    padding-top: 5rem;
-    padding-bottom: 3rem;
+    padding-top: 12rem;
+    /* Huge space to isolate sections */
+    padding-bottom: 10rem;
 }
 
 .section-title h2 {
